--- a/client/public/style.css
+++ b/client/public/style.css
@@ -1,21 +1,23 @@
-.body {
+body {
 	margin: 0;
 	padding: 0;
+	/* background-color: rgb(44, 44, 44); */
 }
 
 #user-video {
-	width: 5rem;
+	width: 20rem;
+	position: fixed;
+	right: 40px;
+	bottom: 40px;
+	display: inline;
+	box-shadow: 0 0 10px 0 #bdbdbd;
+	border-radius: 15px;
 }
 
 #partner-video {
-	width: 100%;
-}
-
-.container {
+	/* width: 100%; */
 	height: 100vh;
-	width: 100%;
-	display: flex;
-	flex-direction: column;
+	margin: 0 auto;
 }
 
 .row {
@@ -23,8 +25,55 @@
 	width: 100%;
 }
 
-.video {
-	border: 1px solid blue;
-	width: 50%;
-	height: 50%;
+/* Action Bar and Buttons/Icons */
+.action-button {
+	padding: 5px;
+	margin: 0 5px;
+	border-radius: 10px;
+	-webkit-backdrop-filter: blur(5px);
+	backdrop-filter: blur(5px);
+	color: tomato;
+}
+
+#action-bar {
+	display: flex;
+	justify-content: space-evenly;
+	position: fixed;
+	bottom: 40px;
+	left: 50%;
+	transform: translateX(-50%);
+}
+
+.red-background {
+	background-color: rgba(255, 0, 0, 0.5);
+}
+
+.grey-background {
+	background-color: rgba(197, 197, 197, 0.5);
+}
+
+.telephone-icon::part(base) {
+	color: white;
+}
+
+.telephone-icon::part(base):hover {
+	color: rgb(172, 0, 0);
+}
+
+.regular-icon::part(base) {
+	color: white;
+}
+
+.regular-icon::part(base):hover {
+	color: rgb(81, 188, 255);
+}
+.container {
+	height: 100vh;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+.action-button-icon {
+	font-size: 80px;
 }
