--- a/client/public/style.css
+++ b/client/public/style.css
@@ -12,6 +12,7 @@ body {
 	display: inline;
 	box-shadow: 0 0 10px 0 #bdbdbd;
 	border-radius: 15px;
+	z-index: 1;
 }
 
 #partner-video {
@@ -25,6 +26,11 @@ body {
 	width: 100%;
 }
 
+.row.video-chat {
+	background-color: rgb(37, 38, 58);
+	height: 100vh;
+}
+
 /* Action Bar and Buttons/Icons */
 .action-button {
 	padding: 5px;
@@ -35,14 +41,55 @@ body {
 	color: tomato;
 }
 
+#mouse-move-area {
+	position: fixed;
+	height: 70vh;
+	width: 100%;
+	top: 0;
+	/* background-color: rgba(255, 0, 0, 0.288); */
+}
+
 #action-bar {
 	display: flex;
 	justify-content: space-evenly;
 	position: fixed;
 	bottom: 40px;
 	left: 50%;
-	transform: translateX(-50%);
+	transform: translateX(-50%) translateY(0);
 }
+
+.actionbar-animate-in {
+	animation: come-in 0.8s ease forwards;
+}
+
+/* show */
+@keyframes come-in {
+	0% {
+		transform: translateX(-50%) translateY(100px);
+	}
+	100% {
+		transform: translateX(-50%) translateY(0);
+	}
+}
+
+.actionbar-animate-out {
+	/* transform: translateY(0); */
+	animation: come-out 0.8s ease forwards;
+}
+
+@keyframes come-out {
+	0% {
+		transform: translateX(-50%) translateY(0);
+	}
+	100% {
+		transform: translateX(-50%) translateY(100px);
+	}
+}
+
+/* .actionbar-animate-out {
+	transform: translateY(150px);
+	animation: come-in 0.8s ease forwards;
+} */
 
 .red-background {
 	background-color: rgba(255, 0, 0, 0.5);
