--- a/client/public/style.css
+++ b/client/public/style.css
@@ -1,3 +1,7 @@
+:root {
+	--animation-duration: 0.6s;
+}
+
 body {
 	margin: 0;
 	padding: 0;
@@ -10,7 +14,7 @@ body {
 	right: 40px;
 	bottom: 40px;
 	display: inline;
-	box-shadow: 0 0 10px 0 #bdbdbd;
+	box-shadow: 0 0 10px 0 #35353559;
 	border-radius: 15px;
 	z-index: 1;
 }
@@ -59,7 +63,7 @@ body {
 }
 
 .actionbar-animate-in {
-	animation: come-in 0.8s ease forwards;
+	animation: come-in var(--animation-duration) ease forwards;
 }
 
 /* show */
@@ -74,7 +78,7 @@ body {
 
 .actionbar-animate-out {
 	/* transform: translateY(0); */
-	animation: come-out 0.8s ease forwards;
+	animation: come-out var(--animation-duration) ease forwards;
 }
 
 @keyframes come-out {
@@ -85,11 +89,6 @@ body {
 		transform: translateX(-50%) translateY(100px);
 	}
 }
-
-/* .actionbar-animate-out {
-	transform: translateY(150px);
-	animation: come-in 0.8s ease forwards;
-} */
 
 .red-background {
 	background-color: rgba(255, 0, 0, 0.5);
